<resources>
    <string name="app_name">DearMe</string>
    <string name="greeting">Hi So Hee, \nWelcome Back!</string>
    <string name="post_q1">How was your overall mood today?</string>
    <string name="post_q2">How was your anxiety or stress today?</string>
    <string name="post_q3">How was your sleep last night?</string>
    <string name="post_q4">How much physical activity did you engage in?</string>
    <string name="post_q5">How much did you express your feelings today?</string>
    <string name="post_q6">How relaxed were you today?</string>
    <string name="feeling_button">Feeling</string>
    <string name="anastasya">dr. Anastasya Venny Yustiana M.Biomed</string>
    <string name="home_title_1_hours">Hours: 8:30am-5pm</string>
    <string name="open_button">Open</string>
    <string name="profile_greeting">Han So Hee</string>
    <string name="call_button"> Call </string>
    <string name="hours_24_7">Hours: 24/7</string>
    <string name="putri"> dr. Putri Rosarie, Sp.KJ</string>
    <string name="hours_8_30am_5pm">Hours: 8:30am-5pm</string>
    <string name="feeling">Feeling</string>
    <string name="muammal">dr. Muammal Hamidy, Sp.KJ</string>
    <string name="library">Library</string>
    <string name="article">Article for you</string>
    <string name="mental_stability">Mental Stability</string>
    <string name="open">Open</string>
    <string name="burnout_phase">Burn Out Phase</string>
    <string name="breathing_exercises">Breathing Exercises</string>
    <string name="daily_activities">Daily Activities</string>
    <string name="bad">bad</string>
    <string name="okay">okay</string>
    <string name="good">good</string>
    <string name="great">great</string>
    <string name="putri_photo">Putri Photo</string>
    <string name="muammal_photo">Muammal Photo</string>
    <string name="anastasya_photo">Anaastasya Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="no">no</string>
    <string name="permission_request_msg">permission request</string>
    <string name="permission_request_title">permission request</string>
    <string name="yes">yes</string>
    <string name="permission_denied_title">permission denied</string>
    <string name="permission_denied_msg">permission denied</string>
    <string name="ok">ok</string>
    <string name="managing_stress">Managing Stress</string>
    <string name="drug_education">Drug Education</string>
    <string name="none">none</string>
    <string name="some">some</string>
    <string name="enough">enough</string>
    <string name="a_lot">a lot</string>
    <string name="not">not</string>
    <string name="a_little">a little</string>
    <string name="decent">decent</string>
    <string name="very">very</string>
    <string name="article_photo">Article Photo</string></resources>