<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Article">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipToPadding="false">

            <TextView
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35dp"
                android:text="@string/article"
                android:textColor="@color/ungu"
                android:textSize="@dimen/l_size"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/wellness_card"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        style="@style/wellness_photo"
                        android:src="@drawable/article1"
                        android:contentDescription="@string/article_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY" />

                    <TextView
                        style="@style/wellness_text"
                        android:text="@string/mental_stability" />

                    <Button
                        android:id="@+id/link1"
                        style="@style/wellness_button"
                        app:cornerRadius="20dp"
                        android:text="@string/open"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                style="@style/wellness_card"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        style="@style/wellness_photo"
                        android:src="@drawable/article2"
                        android:contentDescription="@string/article_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"/>

                    <TextView
                        style="@style/wellness_text"
                        android:text="@string/burnout_phase" />

                    <Button
                        android:id="@+id/link2"
                        style="@style/wellness_button"
                        app:cornerRadius="20dp"
                        android:text="@string/open_button"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                style="@style/wellness_card"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        style="@style/wellness_photo"
                        android:src="@drawable/article3"
                        android:contentDescription="@string/article_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"/>

                    <TextView
                        style="@style/wellness_text"
                        android:text="@string/managing_stress" />

                    <Button
                        android:id="@+id/link3"
                        style="@style/wellness_button"
                        app:cornerRadius="20dp"
                        android:text="@string/open_button"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                style="@style/wellness_card"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        style="@style/wellness_photo"
                        android:src="@drawable/article4"
                        android:contentDescription="@string/article_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"/>

                    <TextView
                        style="@style/wellness_text"
                        android:text="@string/drug_education" />

                    <Button
                        android:id="@+id/link4"
                        style="@style/wellness_button"
                        app:cornerRadius="20dp"
                        android:text="@string/open_button"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</FrameLayout>